--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h2 class="card-title">7 tech tips and tricks that you need to know</h2>
                 <p class="card-body">Using these 7 proven tips from experts in the industry, you can save time, money and more!</p>
                 <div class="card-footer">
-                    <p class="class-read-time"><span>15</span>minuteread</p>
+                    <p class="card-read-time"><span>15</span> minute<br>read</p>
                     <a href="#" class="card-button">read more</a>
                 </div>
             </div>
