add meta tag for viewport

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Flexbox Card Demo</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Blinker:400,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet">
         <link href="css/styles.css" rel="stylesheet">
